--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #4444;
-  background: #0022c43;
+  background: #022c43;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
